# SimpLyz

./: .pre-commit-config.yaml  README.md  dev.bat  dev.ps1
dev/: README.md  docker-compose.yml
dev/backend/: .gitignore  Dockerfile  app.py  data_plt.py  data_utils.py  pyproject.toml  read_CSV.py  routes.py  tox.ini
dev/backend/src/backend/: chats.py  csvs.py
dev/backend/test/: test.ipynb
dev/backend/uploads/: demo.csv
dev/database/: Dockerfile  go.mod  go.sum  main.go
dev/database/csvs/: csvs.go
dev/database/init/: init.sql
dev/database/sql/admin/: create.sql
dev/database/sql/chats/: create.sql
dev/database/sql/csvs/: create.sql
dev/database/sql/rooms/: box.sql  create.sql  hist.sql  pie.sql  scatter.sql
dev/database/sql/users/: create.sql  data.sql
dev/database/users/: users.go
dev/frontend/: .env.development  .env.production  Dockerfile  env.d.ts  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
dev/frontend/src/: App.js  App.jsx  App.tsx  main.jsx  main.tsx  theme.js  theme.ts  urlConfig.ts
dev/frontend/src/Analysis/: Analysis.js  Boxhidediagram.js  Chat.js  Custom.js  Histogram.js  PieChart.jsx  Plt.js  Scatter.js
dev/frontend/src/app/: rootReducer.ts  store.ts
dev/frontend/src/components/: Header.jsx  Header.tsx  fetch.js  (+1 more)
dev/golang/: .env  Dockerfile  go.mod  go.sum  main.go
dev/golang/chats/: chats.go  go.mod
dev/golang/csvs/: csvs.go  go.mod
dev/golang/users/: go.mod  go.sum  users.go
documents/Go_API/: go-api_v1_0.pdf:Zone.Identifier
documents/環境構築/: Goの導入.md  PostgreSQLの導入.md  Rye導入.md
(+99 files in other folders)
